--- a/foundry.toml
+++ b/foundry.toml
@@ -4,3 +4,12 @@ out = "out"
 libs = ["lib"]
 
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
+[rpc_endpoints]
+avalanche = "https://api.avax.network/ext/bc/C/rpc"
+fuji = "https://api.avax-test.network/ext/bc/C/rpc"
+
+[profile.fuji]
+chain_id = 43113
+eth_rpc_url = "https://api.avax-test.network/ext/bc/C/rpc"
+optimizer = true
+optimizer-runs = 800
