--- a/foundry.toml
+++ b/foundry.toml
@@ -2,7 +2,7 @@
 src = "src"
 out = "out"
 libs = ["lib"]
-
+# gas limit in tests
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
 [rpc_endpoints]
 avalanche = "https://api.avax.network/ext/bc/C/rpc"
@@ -13,3 +13,7 @@ chain_id = 43113
 eth_rpc_url = "https://api.avax-test.network/ext/bc/C/rpc"
 optimizer = true
 optimizer-runs = 800
+
+[profile.neon-devnet]
+chain_id = 245022926
+eth_rpc_url = "https://devnet.neonevm.org"
